# PPTRag

./: .gitignore  .pre-commit-config.yaml  README.md  changelog.md  docker-compose.yml  ruff.toml
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/api/: main.py
backend/app/: generator.py  main.py  models.py  retriever.py  utils.py
backend/data/markdowns/: llama_index_content2023-conocophillips-aim-presentation.md  pymupdf_content2024-conocophillips-proxy-statement.md  unstructured_content2023-conocophillips-aim-presentation.md  unstructured_content2024-conocophillips-proxy-statement.md
backend/ingestion/: ingest.py
backend/notebooks/: colipali.ipynb  extraction.ipynb  generation.ipynb
frontend/: Dockerfile  index.html  package.json  pnpm-lock.yaml
frontend/src/: App.jsx
