[project]
name = "backend"
version = "0.1.0"
description = "RAG app to chat with your presentation ( Text + Diagram + charts )"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "numpy>=2.2.2",
    "openai>=1.61.1",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]
