[project]
name = "backend"
version = "0.1.0"
description = "RAG app to chat with your presentation ( Text + Diagram + charts )"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "llama-cloud-services>=0.6.0",
    "numpy>=1.22.1",
    "openai>=1.61.1",
    "paddlepaddle==3.0.0b1",
    "pdf2image>=1.17.0",
    "pillow-heif>=0.21.0",
    "poppler-utils>=0.1.0",
    "pytesseract>=0.3.13",
    "tesseract>=0.1.3",
    "unstructured-paddleocr==2.8.1.0",
    "unstructured-inference==0.8.5",
    "unstructured.pytesseract>=0.3.12",
    "setuptools>=75.8.0",
    "wheel>=0.45.1",
    "pdfminer-six>=20240706",
    "pi-heif>=0.21.0",
    "onnxruntime==1.19.2",
    "unstructured>=0.16.20",
    "llama-index>=0.12.16",
    "llama-index-core>=0.12.16.post1",
    "pymupdf>=1.25.3",
    "pymupdf4llm>=0.0.17",
    "byaldi>=0.0.7",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "flash-attn>=2.7.4.post1",
    "einops>=0.8.1",
    "qwen-vl-utils>=0.0.10",
    "pydantic>=2.10.6",
    "bitsandbytes>=0.45.2",
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]
